# Document-AI---RAG-Pipeline

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  config.py  docker-compose.yml  document_loader.py  pipeline.py  prompt_chains.py  pyproject.toml  requirements.txt  reranker.py  run.py  semantic_chunker.py  vector_store.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  app.py
chunking/: __init__.py  semantic_chunker.py
data/: knowledge_graph.json  sessions.db
docs/: architecture.md  model_guide.md
embedding/: __init__.py  vector_store.py
features/: __init__.py  collaboration.py  comparator.py  evaluation.py  knowledge_graph.py  pdf_annotator.py  query_analytics.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
ingestion/: __init__.py  document_loader.py
llm/: __init__.py  prompt_chains.py
retrieval/: __init__.py  reranker.py
tests/: conftest.py  test_api.py  test_chunker.py  test_config.py  test_pipeline.py  test_reranker.py  test_vector_store.py
utils/: __init__.py  cache.py  exceptions.py  rate_limiter.py  sessions.py
