[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-rag-pipeline"
version = "3.0.0"
description = "Enterprise-grade Document AI + RAG Pipeline — upload any document and ask questions using local LLMs. Supports PDF, Excel, PowerPoint, OCR, knowledge graphs, RAGAS evaluation, and real-time collaboration."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Shubham Kulkarni", email = "kulkarnishub377@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Natural Language :: English",
    "Environment :: Web Environment",
]
keywords = [
    "document-ai", "rag", "retrieval-augmented-generation", "faiss",
    "ollama", "langchain", "ocr", "semantic-search", "vector-store",
    "question-answering", "knowledge-graph", "websocket", "pdf-annotation",
    "ragas", "evaluation", "document-comparison", "mistral", "llm",
    "fastapi", "paddleocr", "sentence-transformers", "cross-encoder",
    "bm25", "hybrid-search", "chat-sessions", "rate-limiting",
    "enterprise", "private-ai", "local-llm", "document-intelligence",
]
dependencies = [
    # OCR + Layout
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.7.3",

    # Document Parsing (PDF / DOCX / Excel / PPTX)
    "pdfplumber==0.11.0",
    "PyMuPDF>=1.24.5",
    "python-docx==1.1.2",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",

    # Chunking & LLM
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.1.0",
    "tiktoken==0.7.0",

    # Embedding + Vector Store
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.9.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",

    # API layer
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "python-multipart==0.0.9",
    "websockets>=12.0",

    # Utilities
    "tqdm==4.66.4",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "pydantic==2.8.2",

    # Web crawling
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",

    # Hybrid Search
    "rank_bm25>=0.2.2",

    # Language detection
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "httpx>=0.27.0",
    "black",
    "ruff",
    "pre-commit",
]
gpu = [
    "faiss-gpu>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/kulkarnishub377/Document-AI---RAG-Pipeline"
Documentation = "https://github.com/kulkarnishub377/Document-AI---RAG-Pipeline/tree/main/docs"
Issues = "https://github.com/kulkarnishub377/Document-AI---RAG-Pipeline/issues"
Source = "https://github.com/kulkarnishub377/Document-AI---RAG-Pipeline"
Changelog = "https://github.com/kulkarnishub377/Document-AI---RAG-Pipeline/blob/main/CHANGELOG.md"

[project.scripts]
doc-rag = "run:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", "data/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
